--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,75 @@
-<p>register works!</p>
+<div class="row no-gutters login-page">
+  <div class="col-md-6 col-sm-12 form-section">
+    <mat-card id="login-form">
+      <mat-card-title class="page-title" style="padding: 0">
+        <h1>{{title}}</h1>
+        <div>
+          <span class="page-subtitle">
+            Sign up now to receive exclusive offers and promotions.
+            <br>
+            Already have an account? <a routerLink="/user/login" class="link-text">Log in</a>.
+          </span>
+        </div>
+      </mat-card-title>
+      <mat-card-subtitle>Mat card subtitle</mat-card-subtitle>
+      <form class="signup-form" [formGroup]="registerForm" (ngSubmit)="onLogin()">
+        <mat-card-content class="form-content">
+          <div class="form-row" style="">
+            <mat-form-field  appearance="outline">
+              <mat-label>First Name</mat-label>
+              <input matInput type="text" formControlName="firstname" required>
+              <mat-error>First name is required</mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+              <mat-label>Last Name</mat-label>
+              <input matInput type="text" formControlName="lastname" required>
+              <mat-error>Last name is required</mat-error>
+            </mat-form-field>
+          </div>
+          <div class="form-row" style="">
+            <mat-form-field  appearance="outline">
+              <mat-label>Email</mat-label>
+              <input matInput type="text" formControlName="email" required>
+              <mat-error>Email is required</mat-error>
+              <mat-error>Please provide an valid email</mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+              <mat-label>Username</mat-label>
+              <input matInput type="text" formControlName="username" required>
+              <mat-error>Username is required</mat-error>
+              <mat-error>Username is already taken</mat-error>
+            </mat-form-field>
+          </div>
+          <div class="form-row" style="">
+            <mat-form-field  appearance="outline">
+              <mat-label>Password</mat-label>
+              <input matInput type="password" formControlName="password" required>
+              <mat-error>Password is required</mat-error>
+              <mat-error>Password muss have at least 8 character</mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+              <mat-label>Confirm password</mat-label>
+              <input matInput type="password" formControlName="verifyPassword" required>
+              <mat-error>Verification is required</mat-error>
+              <mat-error>Password does not match</mat-error>
+            </mat-form-field>
+          </div>
+          <section style="font-size: 13px">
+            <mat-checkbox formControlName="terms" style="margin-left: -10px">I agree to the Terms and Policy</mat-checkbox>
+            <br>
+            <div style="margin-left: 34px; margin-top: -10px">
+              By creating an account, you agree to the site
+              <a routerLink="#">Terms of Service</a> and <a routerLink="#">Privacy Policy</a>.</div>
+          </section>
+        </mat-card-content>
+        <div class="form-call-to-action">
+          <button mat-raised-button color="primary" class="sign-in-btn" [disabled]="!registerForm.valid">Create account</button>
+        </div>
+
+      </form>
+    </mat-card>
+
+
+  </div>
+  <div class="col-md-6 d-none d-md-block image-section"></div>
+</div>
