--- a/src/assets/scss/_params.scss
+++ b/src/assets/scss/_params.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
 
-:root[color-palette] {
+:root {
   --palette-primary-rgb: 59, 134, 255;
   --palette-primary-light-rgb: 79, 146, 255;
   --palette-primary-dark-rgb: 50, 114, 217;
@@ -37,6 +37,7 @@
   --palette-grey-7-rgb: 130, 138, 151;
   --palette-grey-8-rgb: 102, 109, 119;
   --palette-grey-9-rgb: 60, 63, 70;
+  --hex-google-color: #CC181E;
 }
 
 :root {
