add authService, jwtService, jwtInterceptor, localStorageService and login function

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
         <mat-card-content class="form-content">
           <mat-form-field class="form-field" appearance="outline">
             <mat-label>Username</mat-label>
-            <input matInput type="text" formControlName="username" style="padding: -15px; margin: 0" required>
+            <input matInput type="text" formControlName="email" style="padding: -15px; margin: 0" required>
             <mat-error>Please provide a username</mat-error>
           </mat-form-field>
           <mat-form-field class="form-field" appearance="outline">
