add login and registration to auth packages and create auth.route

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -35,7 +35,7 @@
         </div>
         <div class="existing-account-section">
           <span class="text">Don't have an account? </span>
-          <a href="" routerLink="/user/register" class="link-text">Sign up.</a>
+          <a href="" routerLink="/auth/register" class="link-text">Sign up.</a>
         </div>
       </form>
     </mat-card>
