--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -7,7 +7,7 @@
           <span class="page-subtitle">
             Sign up now to receive exclusive offers and promotions.
             <br>
-            Already have an account? <a routerLink="/user/login" class="link-text">Log in</a>.
+            Already have an account? <a routerLink="/auth/login" class="link-text">Log in</a>.
           </span>
         </div>
       </mat-card-title>
