--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -6,18 +6,30 @@
         <span class="page-subtitle">Enter your sign in details below so you can enjoy this Angular template.</span>
       </mat-card-title>
       <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-        <mat-error>The username and password were not recognized</mat-error>
         <mat-card-content class="form-content">
           <mat-form-field class="form-field" appearance="outline">
-            <mat-label>Username</mat-label>
+            <mat-label>Email</mat-label>
             <input matInput type="text" formControlName="email" style="padding: -15px; margin: 0" required>
-            <mat-error>Please provide a username</mat-error>
+            <mat-error>
+              @if (isControlInvalid('email', 'required')) {
+                Please provide a username
+              } @else if (isControlInvalid('email', 'email')) {
+                Email is invalid
+              }
+            </mat-error>
           </mat-form-field>
           <mat-form-field class="form-field" appearance="outline">
             <mat-label>Password</mat-label>
             <input matInput type="password" formControlName="password" required>
-            <mat-error>Please provide a valid password</mat-error>
+            <mat-error>
+              @if (isControlInvalid('password', 'required')){
+                Password is required
+              } @else if (isControlInvalid('password', 'minLength')){
+                Password should be at least 8 characters long
+              }
+            </mat-error>
           </mat-form-field>
+          <mat-error> @if (invalidCredentials)  {Invalid credentials} </mat-error>
         </mat-card-content>
         <div class="form-call-to-action" style="">
           <a href="#" class="link-text">Forgot password?</a>
@@ -29,9 +41,9 @@
           <hr class="line">
         </div>
         <div class="social-logins row no-gutters">
-          <button type="button" class="col-xs-12 col-sm-4 fb-signin"> Facebook </button>
-          <button type="button" class="col-xs-12 col-sm-4 google-signin"> Google </button>
-          <button type="button" class="col-xs-12 col-sm-4 twitter-signin"> Twitter </button>
+          <button type="button" class="col-xs-12 col-sm-4 fb-signin"> Facebook</button>
+          <button type="button" class="col-xs-12 col-sm-4 google-signin"> Google</button>
+          <button type="button" class="col-xs-12 col-sm-4 twitter-signin"> Twitter</button>
         </div>
         <div class="existing-account-section">
           <span class="text">Don't have an account? </span>
