--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-6 col-sm-12 form-section">
     <mat-card id="login-form">
       <mat-card-title class="page-title" style="padding: 0">
-        <h1>{{title}}</h1>
+        <h1>{{ title }}</h1>
         <div>
           <span class="page-subtitle">
             Sign up now to receive exclusive offers and promotions.
@@ -15,7 +15,7 @@
       <form class="signup-form" [formGroup]="registerForm" (ngSubmit)="onLogin()">
         <mat-card-content class="form-content">
           <div class="form-row" style="">
-            <mat-form-field  appearance="outline">
+            <mat-form-field appearance="outline">
               <mat-label>First Name</mat-label>
               <input matInput type="text" formControlName="firstname" required>
               <mat-error>First name is required</mat-error>
@@ -27,7 +27,7 @@
             </mat-form-field>
           </div>
           <div class="form-row" style="">
-            <mat-form-field  appearance="outline">
+            <mat-form-field appearance="outline">
               <mat-label>Email</mat-label>
               <input matInput type="text" formControlName="email" required>
               <mat-error>Email is required</mat-error>
@@ -41,7 +41,7 @@
             </mat-form-field>
           </div>
           <div class="form-row" style="">
-            <mat-form-field  appearance="outline">
+            <mat-form-field appearance="outline">
               <mat-label>Password</mat-label>
               <input matInput type="password" formControlName="password" required>
               <mat-error>Password is required</mat-error>
@@ -55,15 +55,19 @@
             </mat-form-field>
           </div>
           <section style="font-size: 13px">
-            <mat-checkbox formControlName="terms" style="margin-left: -10px">I agree to the Terms and Policy</mat-checkbox>
+            <mat-checkbox formControlName="terms" style="margin-left: -10px">I agree to the Terms and Policy
+            </mat-checkbox>
             <br>
             <div style="margin-left: 34px; margin-top: -10px">
               By creating an account, you agree to the site
-              <a routerLink="#">Terms of Service</a> and <a routerLink="#">Privacy Policy</a>.</div>
+              <a routerLink="#">Terms of Service</a> and <a routerLink="#">Privacy Policy</a>.
+            </div>
           </section>
         </mat-card-content>
         <div class="form-call-to-action">
-          <button mat-raised-button color="primary" class="sign-in-btn" [disabled]="!registerForm.valid">Create account</button>
+          <button mat-raised-button color="primary" class="sign-in-btn" [disabled]="!registerForm.valid">Create
+            account
+          </button>
         </div>
 
       </form>
